Fixed Spacing

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 30px 30px;
         }
 
         .card {
